~NotesApp | fix: issue with scrollbar; implement: custom button; style: button, containers, notes

--- a/Notes-App/styles.css
+++ b/Notes-App/styles.css
@@ -1,16 +1,20 @@
-html {
-  /* height: 100%; */
-  max-height: 100vh;
-  height: 100vh;
-  margin: 0;
-  /* overflow: hidden; */
-  position: relative;
-}
+html,
 body {
-  margin: 0;
-  padding: 10px;
   height: 100%;
-  position: relative;
+  line-height: 150%;
+  margin: 0;
+  overflow: hidden;
+  width: 100%;
+}
+
+body {
+  font-family: Roboto, system-ui, sans-serif;
+  font-size: 81.25%;
+  padding: 5px;
+}
+
+.title {
+  font-size: 30px;
 }
 
 .main-container {
@@ -22,33 +26,84 @@ body {
 }
 
 .notes-container {
+  padding: 10px;
   border-style: solid;
   border-color: black;
   border-width: 1px;
   border-radius: 5px;
   flex-basis: 75%;
   overflow: scroll;
-  padding: 10px;
+  box-shadow: 1px 5px #999;
+  height: 85%;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.notes-container::-webkit-scrollbar {
+  display: none;
 }
 
 .note {
-  width: 100%;
-  height: 75px;
-  border-style: dashed;
-  border-color: brown;
+  /* width: 100%; */
+  padding: 5px;
+  min-height: 75px;
+  border-style: solid;
+  border-color: #d5d5d5;
   border-radius: 3px;
   border-width: 2px;
-  margin: 10px 0px;
+  margin-bottom: 10px;
+  position: relative;
+  box-shadow: 3px 3px 3px #999;
 }
 
-.note p {
+.note .note-content {
   margin: 0;
+  height: 80%;
+  width: auto;
+}
+
+.note .note-date {
+  position: absolute;
+  right: 5px;
+  bottom: 2px;
 }
 
 .notes-input-container {
   margin-left: 10px;
+  min-height: 25%;
+
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: flex-start;
 }
 
-#add-button {
+textarea {
+  max-width: 100%;
+  box-shadow: 1px 1px 1px #999;
+  border-radius: 3px;
+}
+
+.add-button {
   margin-left: 5px;
+  font-size: 200%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: 150px;
+  border-radius: 5px;
+  margin: 5px;
+  user-select: none;
+}
+
+.add-button:hover {
+  cursor: pointer;
+  background-color: aqua;
+}
+
+.add-button:active {
+  background-color: aqua;
+  opacity: 0.5;
 }
